feat: added new colors

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,7 +3,7 @@
 :root {
 	--background-001: #1a23a073;
 	--background-002: #15db9573;
-	--background-003: #00ff0075;
+	--background-003: #05545e;
 	--background-004: #00000035;
 	--background-005: #000000;
 	--background-006: #ffffff;
