--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Kanit:wght@100;200;300;400;500;600;700&display=swap');
 
 :root {
-	--background-001: #1a23a073;
-	--background-002: #15db9573;
-	--background-003: #05545e;
-	--background-004: #00000035;
+	--background-001: #242d39bf;
+	--background-002: #10253cbf;
+	--background-003: #000000bf;
+	--background-004: #253237;
 	--background-005: #000000;
 	--background-006: #ffffff;
 }
