--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,8 @@
 	--background-004: #253237;
 	--background-005: #000000;
 	--background-006: #ffffff;
+	--background-007: #09203f;
+	--background-008: #537895;
 }
 
 :root,
