feat: added new colors

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,6 +9,13 @@
 	--background-006: #ffffff;
 	--background-007: #09203f;
 	--background-008: #537895;
+	--background-009: #ffffff26;
+	--background-010: #ffffff66;
+	--background-011: #989898;
+	--background-012: #00000066;
+	--background-013: #00000026;
+	--background-014: #10253c;
+	--background-015: #242d39;
 }
 
 :root,
