feat: added new colors

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,6 +16,8 @@
 	--background-013: #00000026;
 	--background-014: #10253c;
 	--background-015: #242d39;
+	--background-016: #4a626e;
+	--background-017: #1e2130;
 }
 
 :root,
