feat: new colors

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,6 +21,8 @@
 	--background-015: #242d39;
 	--background-016: #4a626e;
 	--background-017: #1e2130;
+	--background-018: #dddddd;
+	--background-019: #6e88a1;
 
 	--sb-size: 2px;
 	--sb-thumb-color-001: #003459;
