feat: added new colours

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,8 +21,10 @@
 	--background-015: #242d39;
 	--background-016: #4a626e;
 	--background-017: #1e2130;
-	--background-018: #dddddd;
-	--background-019: #6e88a1;
+	--background-018: #dd3131;
+	--background-019: #770000;
+	--background-020: #fb2056;
+	--background-021: #870223;
 
 	--sb-size: 2px;
 	--sb-thumb-color-001: #003459;
